--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -1,9 +1,9 @@
 :root {
     --main: rgb(237, 237, 237);
     --transparent-main: rgb(237, 237, 237, 0.9);
-    --second: rgb(5, 5, 5);
+    --second: rgb(5, 5, 5) !important;
     --third: rgb(215, 215, 215);
-    --fourth: rgb(81, 81, 81);
+    --fourth: rgb(200, 200, 200);
     --background: rgb(243, 243, 243);
     --highlight: rgba(243, 243, 243, 0.5);
     --transparent-background: rgba(243, 243, 243, 0.9625);
